--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,19 +1,19 @@
-<div class="login-page">
-  <div class="form">
-    <form class="register-form">
-      <input type="text" placeholder="name"/>
-      <input type="password" placeholder="password"/>
-      <input type="text" placeholder="email address"/>
-      <button (click)="submit($event)">create</button>
+{{diagnostic}}
+<div class="container col-md-9">
 
-      <p class="message">Already registered?<a href="#">Sign In</a></p>
+     <h2>Login</h2>
+    <form (ngSubmit)="onSubmit($event)" #loginForm="ngForm">
+       <div class="form-group"  >
+            <label for="username">Username</label>
+            <input type="text" class="form-control" name="username"  required />
+
+        </div>
+        <div class="form-group" >
+            <label for="password">Password</label>
+            <input type="password" class="form-control" name="password"   required />
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+
     </form>
-    <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
-      <button (click)="login($event)">login</button>
-      <button (click)="logout($event)">logout</button>
-      <p class="message">Not registered? <a href="#">Create an account</a></p>
-    </form>
-  </div>
+
 </div>
