--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,13 @@
-<div class="full-size">Dashboard.component.html ==> Dashboard Content Goes here.</div>
+<div class="full-size">
+  <div>
+    <!-- points to search-menu.component -->
+    <!-- TODO @wnamen make the search menu component float somehow?
+    This will likely be done either in a wrapping div,
+    or within the component itself. -->
+    <search-menu></search-menu>
+  </div>
+  <div>
+    <!-- TODO @barcher, @wnamen eventually will display the tag items based on search selection -->
+    <tagbar></tagbar>
+  </div>
+</div>
