--- a/src/app/assets/styles/app.scss
+++ b/src/app/assets/styles/app.scss
@@ -1,13 +1,32 @@
-.full-size {
+ .full-size {
   padding:0;
   display:inline-flex;
   border-width: thin;
   border-style:solid;
   border-color: #00AA00;
+  bottom: 0;
   width:100%;
   height:100%;
 }
+.full-width {
+ padding:0;
+ display:inline-flex;
+ border-width: thin;
+ border-style:solid;
+ border-color: #00AA00;
+ bottom: 0;
+ width:100%;
+}
 
+.full-height {
+ padding:0;
+ display:inline-flex;
+ border-width: thin;
+ border-style:solid;
+ border-color: #00AA00;
+ bottom: 0;
+ height:100%;
+}
 .footer {
   padding:15;
   display:inline-flex;
