--- a/src/app/assets/templates/layouts/app-layout.html
+++ b/src/app/assets/templates/layouts/app-layout.html
@@ -1,12 +1,14 @@
 <!-- TODO @wnamen design the main page layout -->
 <!-- <main-nav-bar></main-nav-bar> -->
-<div class="header">
-  <p>Location: app-layout.html Permanent Header Space,
-  please configure as needed, this is not part of the angular app</p></div>
+
+<div class="header" class="full-width">
+  <p>Location: app-layout.html Permanent Header Space, please configure as needed, this is not part of the angular app</p>
+</div>
 <div class="full-size">
   <!-- routes render here -->
   <router-outlet></router-outlet>
 </div>
 <!-- footer -->
-<div class="footer"><p>Location: app-layout.html Permanent Footer Space,
-  please configure as needed, this is not part of the angular app</p></div>
+<div class="footer">
+  <p>Location: app-layout.html Permanent Footer Space, please configure as needed, this is not part of the angular app</p>
+</div>
