--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,6 @@
   display:inline-flex;
   border-width: thin;
   border-style:solid;
-  border-color: #00AA00;
   bottom: 0;
   width:100%;
   height:100%;
@@ -26,6 +25,7 @@
  border-color: #00AA00;
  bottom: 0;
  height:100%;
+ min-height: 100%;
 }
 .footer {
   padding:15;
@@ -44,4 +44,11 @@
   border-color: #FFCC00;
   width:100%;
   height:90px;
+}
+
+.bootstrap-tagsinput {
+    width: 100%;
+}
+.label {
+    line-height: 2 !important;
 }
