--- a/src/app/components/ui/search/search-menu.component.html
+++ b/src/app/components/ui/search/search-menu.component.html
@@ -7,10 +7,8 @@
     </div>
   </div>
 
-  <div id="filterTags">
-    <tagbar></tagbar>
-  </div>
- 
+  <tagbar #filterTagBar></tagbar>
+
   <div class="row">
     <div id="filterSelection" class= "col">
       <h2>Customers</h2>
