--- a/src/app/components/ui/tagbar/tagbar-item.component.html
+++ b/src/app/components/ui/tagbar/tagbar-item.component.html
@@ -1,3 +1,1 @@
-<div>
-  <a href="http://google.com">{{linkText}}</a>
-</div>
+<div (click)="onClick($event)" class="tagbar-item">{{dataProvider.content}} <span role="remove">&times;</span></div>
