--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,18 @@
+// _variables.scss
+@import 'variables';
+
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
+}
+html {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    min-height: 100%;
+}
+html body {
+    min-height: 100%
 }
