--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,3 +2,5 @@
 // NOTE: insure you save your modules as _<module_name>.scss, if not prefixed
 // it will not import.
 @import './app/assets/styles/sass/colors';
+@import './app/assets/styles/sass/borders-edges';
+@import './app/assets/styles/sass/margins-paddings';
