--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- TODO @wnamen design the main page layout -->
 <!-- <main-nav-bar></main-nav-bar> -->
 
-<div class="header" class="full-width">
+<div class="header background-blue" class="full-width">
   <p>Location: app-layout.html Permanent Header Space, please configure as needed, this is not part of the angular app</p>
 </div>
 <div class="full-size">
@@ -9,6 +9,6 @@
   <router-outlet></router-outlet>
 </div>
 <!-- footer -->
-<div class="footer">
+<div class="footer background-linen">
   <p>Location: app-layout.html Permanent Footer Space, please configure as needed, this is not part of the angular app</p>
 </div>
