--- a/src/app/assets/styles/sass/_colors.scss
+++ b/src/app/assets/styles/sass/_colors.scss
@@ -1,3 +1,149 @@
-.test-color {
-  width:100%;
+// FONTS
+
+.font-blue {
+  color: #009ddb;
+}
+
+.font-linen {
+  color: #f4f1ea;
+}
+
+.font-white {
+  color: white;
+}
+
+.font-black {
+  color: #2f3145;
+}
+
+.font-yellow {
+  color: #ffbc13;
+}
+
+.font-orange {
+  color: #ff8700;
+}
+
+.font-dark-blue {
+  color: #001284;
+}
+
+.font-red {
+  color: #e2231b;
+}
+
+.font-green {
+  color: #00e05b;
+}
+
+.font-dark-green {
+  color: #abc233;
+}
+
+.font-gray {
+  color: #b4b4b4;
+}
+
+.font-purple {
+  color: #4c4686;
+}
+
+// BACKGROUNDS
+
+.background-blue {
+  background-color: #009ddb;
+}
+
+.background-linen {
+  background-color: #f4f1ea;
+}
+
+.background-white {
+  background-color: white;
+}
+
+.background-black {
+  background-color: #2f3145;
+}
+
+.background-yellow {
+  background-color: #ffbc13;
+}
+
+.background-orange {
+  background-color: #ff8700;
+}
+
+.background-dark-blue {
+  background-color: #001284;
+}
+
+.background-red {
+  background-color: #e2231b;
+}
+
+.background-green {
+  background-color: #00e05b;
+}
+
+.background-dark-green {
+  background-color: #abc233;
+}
+
+.background-gray {
+  background-color: #b4b4b4;
+}
+
+.background-purple {
+  background-color: #4c4686;
+}
+
+// BORDERS
+
+.border-blue {
+  border-color: #009ddb;
+}
+
+.border-linen {
+  border-color: #f4f1ea;
+}
+
+.border-white {
+  border-color: white;
+}
+
+.border-black {
+  border-color: #2f3145;
+}
+
+.border-yellow {
+  border-color: #ffbc13;
+}
+
+.border-orange {
+  border-color: #ff8700;
+}
+
+.border-dark-blue {
+  border-color: #001284;
+}
+
+.border-red {
+  border-color: #e2231b;
+}
+
+.border-green {
+  border-color: #00e05b;
+}
+
+.border-dark-green {
+  border-color: #abc233;
+}
+
+.border-gray {
+  border-color: #b4b4b4;
+}
+
+.border-purple {
+  border-color: #4c4686;
 }
