--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     <!-- TODO @wnamen make the search menu component float somehow?
     This will likely be done either in a wrapping div,
     or within the component itself. -->
-    <search-menu [model]='searchMenuModel'></search-menu>
+    <search-menu #searchMenu [model]='searchMenuModel'></search-menu>
   </div>
   <div class="row">
     <!-- TODO @barcher, @wnamen eventually will display the tag items based on search selection -->
