--- a/src/app/components/ui/search/search-menu.component.html
+++ b/src/app/components/ui/search/search-menu.component.html
@@ -7,41 +7,18 @@
     </div>
   </div>
 
-  <tagbar #filterTagBar></tagbar>
+  <tagbar #filterTagBar [model]='tagBarModel'></tagbar>
 
   <div class="row">
     <div id="filterSelection" class= "col">
-      <h2>Customers</h2>
-      <!-- TODO @wnamen fill out customers using ng-model -->
-      <div ngbDropdown class="d-inline-block">
-        <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Customers</button>
-
-        <div class="dropdown-menu" aria-labelledby="dropdownBasic1">
-          <!-- todo @wnamen wire up the customers here using ngModel and ng-repeat -->
-          <button class="dropdown-item">Customer A</button>
-          <button class="dropdown-item">Customer B</button>
-          <button class="dropdown-item">Customer C</button>
-        </div>
-      </div>
+      <customer-selector #customerSelector [dataProvider]='customerSelectorModel'></customer-selector>
     </div>
     <div  class= "col">
-      <h2>Tags</h2>
-      <!-- TODO @wnamen fill out tags using ng-model -->
-      <div class="form-group">
-        <select multiple class="form-control" id="sel1">
-          <!-- todo @wnamen wire up the tags here using ngModel and ng-repeat -->
-          <option>tagA</option>
-          <option>tagB</option>
-          <option>tagC</option>
-          <option>tagD</option>
-        </select>
-      </div>
-    </div>
-
+      <tag-selector #tagSelector [model]='tagSelectorModel'></tag-selector>
     <!-- <div  class= "col">
       <h2>Data Selection</h2>
 
     </div> -->
-
+    </div>
   </div>
 </div>
