--- a/src/app/assets/styles/sass/_colors.scss
+++ b/src/app/assets/styles/sass/_colors.scss
@@ -101,49 +101,49 @@
 // BORDERS
 
 .border-blue {
-  border-color: #009ddb;
+  border-color: #009ddb !important;
 }
 
 .border-linen {
-  border-color: #f4f1ea;
+  border-color: #f4f1ea !important;
 }
 
 .border-white {
-  border-color: white;
+  border-color: white !important;
 }
 
 .border-black {
-  border-color: #2f3145;
+  border-color: #2f3145 !important;
 }
 
 .border-yellow {
-  border-color: #ffbc13;
+  border-color: #ffbc13 !important;
 }
 
 .border-orange {
-  border-color: #ff8700;
+  border-color: #ff8700 !important;
 }
 
 .border-dark-blue {
-  border-color: #001284;
+  border-color: #001284 !important;
 }
 
 .border-red {
-  border-color: #e2231b;
+  border-color: #e2231b !important;
 }
 
 .border-green {
-  border-color: #00e05b;
+  border-color: #00e05b !important;
 }
 
 .border-dark-green {
-  border-color: #abc233;
+  border-color: #abc233 !important;
 }
 
 .border-gray {
-  border-color: #b4b4b4;
+  border-color: #b4b4b4 !important;
 }
 
 .border-purple {
-  border-color: #4c4686;
+  border-color: #4c4686 !important;
 }
