--- a/src/app/components/ui/search/search-menu.component.html
+++ b/src/app/components/ui/search/search-menu.component.html
@@ -1,9 +1,9 @@
-<div id="search-menu.container" class="full-size">
+<div id="search-menu.container" class="">
   <div id="searchbox">
     <!-- TODO @barcher SearchBox Component -->
-    <div class="form-group">
-      <label for="usr">Search:</label>
-      <input type="text" class="form-control" id="usr">
+    <div class="form-group display-flex">
+      <label for="usr"><i class="fa fa-search" aria-hidden="true"></i></label>
+      <input type="text" class="form-control no-border-right no-border-top no-border-left no-radius small-border-bottom border-gray" id="usr">
     </div>
   </div>
 
