--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,8 @@
 // Use this only as a HUB for importing sub SCSS modules.
 // NOTE: insure you save your modules as _<module_name>.scss, if not prefixed
 // it will not import.
+@import './app/assets/styles/sass/general';
 @import './app/assets/styles/sass/colors';
 @import './app/assets/styles/sass/borders-edges';
 @import './app/assets/styles/sass/margins-paddings';
+@import './node_modules/font-awesome/scss/_variables';
