--- a/src/app/assets/styles/sass/_borders-edges.scss
+++ b/src/app/assets/styles/sass/_borders-edges.scss
@@ -9,7 +9,7 @@
 }
 
 .small-border-right {
-  border-right: 1px solid black;
+  border-right: 1px solid;
 }
 
 .small-border-top {
@@ -87,6 +87,9 @@
 }
 
 // EDGES
+.no-radius {
+  border-radius: 0;
+}
 
 .card-radius {
   border-radius: 10px;
@@ -94,4 +97,10 @@
 
 .circle-radius {
   border-radius: 100%;
+}
+
+.bottom-shadow {
+  -webkit-box-shadow:0px 1px 1px #de1dde;
+  -moz-box-shadow:0px 1px 1px #de1dde;
+  box-shadow:0px 1px 1px #de1dde;
 }
