removed search bar and added more styling to dropdown menu

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,10 +1,9 @@
-<<<<<<< HEAD
 <div class="display-flex">
   <!-- <div id="side-bar" class="col-sm-1 col-md-1 col-lg-1 large-padding small-border-right border-white background-blue">
     Cisco
   </div> -->
   <div id="dash-body" class="background-white">
-    <div id="nav-dropdown-menu" class="display-inline-flex bottom-shadow border-black">
+    <div id="nav-dropdown-menu" class="display-flex bottom-shadow border-black">
       <div class="col-sm-1 col-md-1 col-lg-1 large-padding">
         <p class=" small-border-right border-gray">Cisco</p>
       </div>
