--- a/src/app/components/ui/selectors/customer-selector.component.html
+++ b/src/app/components/ui/selectors/customer-selector.component.html
@@ -1,4 +1,4 @@
-<h2>Customers</h2>
+<h5 class="small-border-bottom border-gray">Customers</h5>
 <!-- TODO @wnamen fill out customers using ng-model -->
 <div ngbDropdown class="d-inline-block">
 <select class="form-control" id="sel2">
