--- a/src/app/components/ui/selectors/tag-selector.component.html
+++ b/src/app/components/ui/selectors/tag-selector.component.html
@@ -1,4 +1,4 @@
-<h2>Tags</h2>
+<h5 class="small-border-bottom border-gray">Tags</h5>
 <!-- TODO @wnamen fill out tags using ng-model -->
 <div class="form-group">
   <select multiple class="form-control" id="sel1">
