added styling to dash menu tags and customer selectors

--- a/src/app/components/ui/search/search-menu.component.html
+++ b/src/app/components/ui/search/search-menu.component.html
@@ -12,7 +12,7 @@
     <div id="filterSelection">
       <customer-selector #customerSelector [dataProvider]='customerSelectorModel'></customer-selector>
     </div>
-    <div>
+    <div id="customerSelection">
       <tag-selector #tagSelector [model]='tagSelectorModel'></tag-selector>
     <!-- <div  class= "col">
       <h2>Data Selection</h2>
