--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,8 @@ html {
     -o-background-size: cover;
     background-size: cover;
     min-height: 100%;
+    font-family: 'Open Sans', sans-serif;
+
 }
 html body {
     min-height: 100%
