--- a/src/app/assets/styles/sass/_margins-paddings.scss
+++ b/src/app/assets/styles/sass/_margins-paddings.scss
@@ -23,45 +23,45 @@
 // MEDIUM MARGINS
 
 .medium-margin {
-  margin: 10px;
+  margin: 15px;
 }
 
 .medium-margin-left {
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 .medium-margin-right {
-  margin-right: 10px;
+  margin-right: 15px;
 }
 
 .medium-margin-top {
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 .medium-margin-bottom {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 // LARGE MARGINS
 
 .large-margin {
-  margin: 15px;
+  margin: 1em;
 }
 
 .large-margin-left {
-  margin-left: 15px;
+  margin-left: 1em;
 }
 
 .large-margin-right {
-  margin-right: 15px;
+  margin-right: 1em;
 }
 
 .large-margin-top {
-  margin-top: 15px;
+  margin-top: 1em;
 }
 
 .large-margin-bottom {
-  margin-bottom: 15px;
+  margin-bottom: 1em;
 }
 
 // NO MARGINS
@@ -111,45 +111,45 @@
 // MEDIUM PADDING
 
 .medium-padding {
-  padding: 10px;
+  padding: 15px;
 }
 
 .medium-padding-left {
-  padding-left: 10px;
+  padding-left: 15px;
 }
 
 .medium-padding-right {
-  padding-right: 10px;
+  padding-right: 15px;
 }
 
 .medium-padding-top {
-  padding-top: 10px;
+  padding-top: 15px;
 }
 
 .medium-padding-bottom {
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 
 // LARGE PADDING
 
 .large-padding {
-  padding: 15px;
+  padding: 1em;
 }
 
 .large-padding-left {
-  padding-left: 15px;
+  padding-left: 1em;
 }
 
 .large-padding-right {
-  padding-right: 15px;
+  padding-right: 1em;
 }
 
 .large-padding-top {
-  padding-top: 15px;
+  padding-top: 1em;
 }
 
 .large-padding-bottom {
-  padding-bottom: 15px;
+  padding-bottom: 1em;
 }
 
 // NO PADDING
