--- a/src/app/components/ui/selectors/customer-selector.component.html
+++ b/src/app/components/ui/selectors/customer-selector.component.html
@@ -1,7 +1,7 @@
-<h5 class="small-border-bottom border-gray">Customers</h5>
+<p class="menu-titles small-border-bottom border-gray large-padding-bottom">CUSTOMERS</p>
 <!-- TODO @wnamen fill out customers using ng-model -->
 <div ngbDropdown class="d-inline-block">
-<select class="form-control" id="sel2">
+<select class="form-control options-box" id="sel2">
     <option *ngFor="let customer of dataProvider.customers">{{customer.displayName}}</option>
     <!-- todo @barcher wire up the customers here using ngModel and ng-repeat -->
   </select>
