--- a/src/app/components/ui/selectors/customer-selector.component.scss
+++ b/src/app/components/ui/selectors/customer-selector.component.scss
@@ -1,3 +1,18 @@
 customer-selector {
 
 }
+
+.menu-titles {
+  font-weight: 600;
+  font-size: small;
+  text-transform: capitalize;
+}
+
+.options-box {
+  width: 10em;
+  padding: 0.5em 0;
+  text-align: left;
+  font-size: small;
+  font-weight: 300;
+  border: none;
+}
