--- a/src/app/components/ui/selectors/tag-selector.component.scss
+++ b/src/app/components/ui/selectors/tag-selector.component.scss
@@ -1,3 +1,22 @@
 tag-selector {
-  
+
+}
+
+.menu-titles {
+  font-weight: 600;
+  font-size: small;
+  text-transform: capitalize;
+}
+
+.option-tag-box {
+  border: none;
+  padding: 0;
+}
+
+.option-tag {
+  width: 10em;
+  padding: 0.5em 0;
+  text-align: left;
+  font-size: small;
+  font-weight: 300;
 }
