continued styling in header and added new font

--- a/src/app/assets/styles/sass/_colors.scss
+++ b/src/app/assets/styles/sass/_colors.scss
@@ -48,6 +48,9 @@
   color: #4c4686;
 }
 
+.font-whitesmoke {
+  color: #efefef;
+}
 // BACKGROUNDS
 
 .background-blue {
@@ -98,6 +101,10 @@
   background-color: #4c4686;
 }
 
+.background-whitesmoke {
+  background-color: #efefef;
+}
+
 // BORDERS
 
 .border-blue {
@@ -146,4 +153,8 @@
 
 .border-purple {
   border-color: #4c4686 !important;
+}
+
+.border-whitesmoke {
+  border-color: #efefef !important;
 }
