--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,11 +3,11 @@
     Cisco
   </div> -->
   <div id="dash-body" class="background-white">
-    <div id="nav-dropdown-menu" class="display-flex bottom-shadow border-black">
-      <div class="col-sm-1 col-md-1 col-lg-1 large-padding">
-        <p class=" small-border-right border-gray">Cisco</p>
+    <div id="nav-dropdown-menu" class="display-flex bottom-shadow border-gray large-padding">
+      <div id="side-nav-dropdown" class="col-sm-1 col-md-1 col-lg-1 large-margin-right">
+        <p class="medium-border-right border-whitesmoke">Cisco</p>
       </div>
-      <div class="col-sm-10 col-md-10 col-lg-10 large-padding">
+      <div class="col-sm-9 col-md-9 col-lg-9 large-padding">
         <!-- points to search-menu.component -->
         <!-- TODO @wnamen make the search menu component float somehow?
         This will likely be done either in a wrapping div,
