--- a/src/app/components/ui/selectors/tag-selector.component.html
+++ b/src/app/components/ui/selectors/tag-selector.component.html
@@ -1,8 +1,8 @@
-<p class="menu-titles small-border-bottom border-gray large-padding-bottom">TAGS</p>
+<p class="menu-titles medium-border-bottom border-whitesmoke medium-padding-bottom">TAGS</p>
 <!-- TODO @wnamen fill out tags using ng-model -->
 <div class="form-group">
   <select multiple class="form-control option-tag-box" id="sel1">
     <!-- todo @wnamen wire up the tags here using ngModel and ng-repeat -->
-    <option class="display-flex option-tag" *ngFor="let tag of model.tags">{{tag.name}}</option>
+    <option class="display-flex option-tag font-gray" *ngFor="let tag of model.tags">{{tag.name}}</option>
   </select>
 </div>
