--- a/src/app/components/ui/search/search-menu.component.html
+++ b/src/app/components/ui/search/search-menu.component.html
@@ -1,14 +1,14 @@
 <div id="search-menu.container" class="">
   <div id="searchbox">
     <!-- TODO @barcher SearchBox Component -->
-    <div class="form-group display-flex">
+    <div class="form-group display-flex medium-border-bottom border-whitesmoke">
       <label for="usr"><i class="fa fa-search" aria-hidden="true"></i></label>
       <tagbar #filterTagBar [model]='tagBarModel'></tagbar>
     </div>
   </div>
 
 
-  <div class="display-flex col-sm-6 col-md-6 col-lg-6">
+  <div id="menuSelectors" class="display-flex col-sm-6 col-md-6 col-lg-6">
     <div id="filterSelection">
       <customer-selector #customerSelector [dataProvider]='customerSelectorModel'></customer-selector>
     </div>
