--- a/src/app/components/ui/selectors/tag-selector.component.scss
+++ b/src/app/components/ui/selectors/tag-selector.component.scss
@@ -4,18 +4,19 @@ tag-selector {
 
 .menu-titles {
   font-weight: 600;
-  font-size: small;
+  font-size: medium;
   text-transform: capitalize;
 }
 
 .option-tag-box {
+  width: 10em;
   border: none;
   padding: 0;
 }
 
 .option-tag {
   width: 10em;
-  padding: 0.5em 0;
+  padding: 0.7em 0;
   text-align: left;
   font-size: small;
   font-weight: 300;
