--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,12 @@
 // _variables.scss
 @import 'variables';
 
+body {
+  font-family: 'Alegreya Sans', sans-serif;
+}
+
 h1 {
   color: #369;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
 html {
