completed most styling for filter menu

--- a/src/app/assets/styles/sass/_colors.scss
+++ b/src/app/assets/styles/sass/_colors.scss
@@ -44,6 +44,10 @@
   color: #b4b4b4;
 }
 
+.font-light-gray {
+  color: #e4e4e4;
+}
+
 .font-purple {
   color: #4c4686;
 }
@@ -95,6 +99,10 @@
 
 .background-gray {
   background-color: #b4b4b4;
+}
+
+.background-light-gray {
+  background-color: #e4e4e4;
 }
 
 .background-purple {
@@ -149,6 +157,10 @@
 
 .border-gray {
   border-color: #b4b4b4 !important;
+}
+
+.border-light-gray {
+  border-color: #e4e4e4;
 }
 
 .border-purple {
