--- a/src/app/components/ui/tagbar/tagbar-item.component.html
+++ b/src/app/components/ui/tagbar/tagbar-item.component.html
@@ -1,1 +1,1 @@
-<div (click)="onClick($event)" class="tagbar-item">{{dataProvider.content}} <span role="remove">&times;</span></div>
+<div (click)="onClick($event)" class="tagbar-item background-light-gray font-black card-radius">{{dataProvider.content}} <span role="remove">&times;</span></div>
