--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
   <div id="dash-body" class="background-white">
     <div id="nav-dropdown-menu" class="display-flex bottom-shadow border-gray large-padding">
       <div id="side-nav-dropdown" class="col-sm-1 col-md-1 col-lg-1 large-margin-right">
-        <p class="medium-border-right border-whitesmoke">Cisco</p>
+        <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo.svg" />
       </div>
       <div class="col-sm-9 col-md-9 col-lg-9 large-padding">
         <!-- points to search-menu.component -->
@@ -13,6 +13,9 @@
         This will likely be done either in a wrapping div,
         or within the component itself. -->
         <search-menu #searchMenu [model]='searchMenuModel'></search-menu>
+      </div>
+      <div class="col-sm-2 col-md-2 col-lg-2">
+        <button class="close-button medium-border border-red font-red card-radius right">&times;</button>
       </div>
       <div class="col-sm-10 col-md-10 col-lg-10 display-none">
         <!-- TODO @barcher, @wnamen eventually will display the tag items based on search selection -->
