--- a/src/app/components/ui/selectors/customer-selector.component.html
+++ b/src/app/components/ui/selectors/customer-selector.component.html
@@ -1,4 +1,4 @@
-<p class="menu-titles medium-border-bottom border-whitesmoke medium-padding-bottom">CUSTOMERS</p>
+<p class="menu-titles medium-border-bottom border-whitesmoke small-padding-bottom">CUSTOMERS</p>
 <!-- TODO @wnamen fill out customers using ng-model -->
 <div ngbDropdown class="d-inline-block">
 <select class="form-control options-box" size="3" id="sel2">
