--- a/src/app/components/ui/selectors/customer-selector.component.scss
+++ b/src/app/components/ui/selectors/customer-selector.component.scss
@@ -4,6 +4,7 @@ customer-selector {
 
 .menu-titles {
   font-weight: 600;
+  letter-spacing: 1px;
   font-size: medium;
   text-transform: capitalize;
 }
@@ -15,9 +16,18 @@ customer-selector {
 }
 
 .option-tag {
-  width: 10em;
-  padding: 1em 0;
+  width: 15em;
+  padding: 1em;
   text-align: left;
   font-size: small;
-  font-weight: 300;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.option-tag::selection {
+  background-color: yellow;
+}
+
+.option-tag:hover {
+  background-color: #f4f1ea;
 }
