--- a/src/app/components/ui/selectors/tag-selector.component.html
+++ b/src/app/components/ui/selectors/tag-selector.component.html
@@ -1,4 +1,4 @@
-<p class="menu-titles medium-border-bottom border-whitesmoke medium-padding-bottom">TAGS</p>
+<p class="menu-titles medium-border-bottom border-whitesmoke small-padding-bottom">TAGS</p>
 <!-- TODO @wnamen fill out tags using ng-model -->
 <div class="form-group">
   <select multiple class="form-control option-tag-box" id="sel1">
