--- a/src/app/components/ui/selectors/tag-selector.component.scss
+++ b/src/app/components/ui/selectors/tag-selector.component.scss
@@ -4,6 +4,7 @@ tag-selector {
 
 .menu-titles {
   font-weight: 600;
+  letter-spacing: 1px;
   font-size: medium;
   text-transform: capitalize;
 }
@@ -15,9 +16,14 @@ tag-selector {
 }
 
 .option-tag {
-  width: 10em;
+  width: 15em;
   padding: 0.7em 0;
   text-align: left;
   font-size: small;
-  font-weight: 300;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.tag-dot {
+  color: green;
 }
