--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,9 @@
   <!-- <div id="side-bar" class="col-sm-1 col-md-1 col-lg-1 large-padding small-border-right border-white background-blue">
     Cisco
   </div> -->
-  <div id="dash-body" class="background-white">
+  <div id="dash-view" class="background-white">
+    <button type="checkbox" id="toggle"></button>
+
     <div id="nav-dropdown-menu" class="display-flex bottom-shadow border-gray large-padding">
       <div id="side-nav-dropdown" class="col-sm-1 col-md-1 col-lg-1 large-margin-right">
         <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo.svg" />
@@ -17,15 +19,17 @@
       <div class="col-sm-2 col-md-2 col-lg-2">
         <button class="close-button medium-border border-red font-red card-radius right">&times;</button>
       </div>
-      <div class="col-sm-10 col-md-10 col-lg-10 display-none">
+      <div class="col-sm-10 col-md-10 col-lg-10">
         <!-- TODO @barcher, @wnamen eventually will display the tag items based on search selection -->
         <tagbar #dashboardTagBar></tagbar>
       </div>
     </div>
 
-    <!-- <div class="col-sm-10 col-md-10 col-lg-10 background-blue">
-
-    </div> -->
+    <div id="dash-body" class="background-linen">
+      <div id="top-dash" class="background-blue">
+        <label for="toggle"></label>
+      </div>
+    </div>
   </div>
 
 </div>
