--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,9 +1,70 @@
 #nav-dropdown-menu {
   width: 100vw;
+  position: absolute;
+  top: -250px;
+  left: 0;
+  height: 250px;
+  padding: 20px;
+  transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
+  overflow: hidden;
 }
 
-#side-nav-dropdown {
+#dash-body {
+  width: 100vw;
+  height: 100vw;
+  transition: margin 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
 }
+
+#top-dash {
+  height: 40vh;
+}
+
+#toggle {
+  position:absolute;
+  appearance:none;
+  cursor:pointer;
+  left:-100%;
+  top:-100%;
+}
+
+#toggle + label {
+  position:absolute;
+  cursor:pointer;
+  padding:10px;
+  background: #26ae90;
+  width: 100px;
+  border-radius: 3px;
+  padding: 8px 10px;
+  color: #FFF;
+  line-height:20px;
+  font-size:12px;
+  text-align:center;
+  -webkit-font-smoothing: antialiased;
+  cursor: pointer;
+  margin:20px 50px;
+  transition:all 500ms ease;
+}
+
+#toggle + label:after {
+  content:"Open"
+}
+
+#toggle:checked + label {
+  background:#dd6149;
+}
+
+#toggle:checked + label:after {
+  content:"Close"
+}
+
+#toggle:checked ~ #nav-dropdown-menu {
+  top: 0;
+}
+
+#toggle:checked ~ #dash-body {
+  margin-top: 250px;
+}
+
 
 #side-nav-dropdown img {
   padding: 1em 2em 1em 0;
@@ -20,4 +81,10 @@
   background-color: #e2231b;
   color: white;
   transition: 0.5s;
+}
+
+.close-button:focus {
+  box-shadow: none;
+  outline: none;
+  border: none;
 }
