--- a/src/app/components/ui/search/search-menu.component.html
+++ b/src/app/components/ui/search/search-menu.component.html
@@ -2,13 +2,13 @@
   <div id="searchbox">
 
     <div class="form-group display-flex medium-border-bottom border-whitesmoke">
-      <label for="usr"><i class="fa fa-search" aria-hidden="true"></i></label>
+      <label for="usr"><i class="fa fa-search large-margin-right" aria-hidden="true"></i></label>
       <tagbar #filterTagBar [model]='tagBarModel'></tagbar>
     </div>
 
   </div>
 
-  <div id="menuSelectors" class="display-flex col-sm-6 col-md-6 col-lg-6">
+  <div id="menuSelectors" class="display-flex col-sm-8 col-md-8 col-lg-8">
 
     <div id="customerSelection">
       <customer-selector #customerSelector
