--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,31 +3,28 @@
     Cisco
   </div> -->
   <div id="dash-view" class="background-white">
-    <button type="checkbox" id="toggle"></button>
-
-    <div id="nav-dropdown-menu" class="display-flex bottom-shadow border-gray large-padding">
+    <div id="nav-dropdown-menu" class="display-flex bottom-shadow border-gray large-padding"
+      [class.menu-active]="toggled">
       <div id="side-nav-dropdown" class="col-sm-1 col-md-1 col-lg-1 large-margin-right">
         <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo.svg" />
       </div>
       <div class="col-sm-9 col-md-9 col-lg-9 large-padding">
-        <!-- points to search-menu.component -->
-        <!-- TODO @wnamen make the search menu component float somehow?
-        This will likely be done either in a wrapping div,
-        or within the component itself. -->
-        <search-menu #searchMenu (customerSelectionChanged)=onCustomerSelectionChanged($event) [model]='searchMenuModel'></search-menu>
+        <search-menu #searchMenu [model]='searchMenuModel'></search-menu>
       </div>
       <div class="col-sm-2 col-md-2 col-lg-2">
-        <button class="close-button medium-border border-red font-red card-radius right">&times;</button>
+        <button class="close-button medium-border border-red font-red card-radius right"
+          (click)="handleMenuToggle()">&times;</button>
       </div>
-      <div class="col-sm-10 col-md-10 col-lg-10">
+      <div class="col-sm-10 col-md-10 col-lg-10 display-none">
         <!-- TODO @barcher, @wnamen eventually will display the tag items based on search selection -->
         <tagbar #dashboardTagBar></tagbar>
       </div>
     </div>
 
-    <div id="dash-body" class="background-linen">
+    <div id="dash-body" class="background-linen"
+      [class.dash-active]="toggled">
       <div id="top-dash" class="background-blue">
-        <label for="toggle"></label>
+        <button id="toggle" (click)="handleMenuToggle()">toggle</button>
       </div>
     </div>
   </div>
