began main dash styling

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -16,7 +16,7 @@
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .form input {
-  font-family: "Roboto", sans-serif;
+  font-family: FontAwesome;
   outline: 0;
   background: #f2f2f2;
   width: 100%;
