--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -25,8 +25,24 @@
   background-color: white;
 }
 
-#side-nav-dropdown img {
+#side-nav-dropdown img, #top-dash img {
   padding: 1em 2em 1em 0;
+}
+
+#toggle {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+#toggle i {
+  font-size: small;
+}
+
+#toggle span {
+  font-style: italic;
+  font-size: 12px;
+  font-weight: 200;
 }
 
 .close-button {
@@ -46,4 +62,22 @@
   box-shadow: none;
   outline: none;
   border: none;
+}
+
+.cards {
+	display: -webkit-flex;
+	display: flex;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-flex-wrap: wrap;
+	flex-wrap: wrap;
+	margin-top: 15px;
+	padding: 1.5%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.card {
+
 }
