--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,14 @@
-<div class="container col-md-9">
-     <h2>Login</h2>
-    <form (ngSubmit)="onSubmit($event)" #loginForm="ngForm">
-       <div class="form-group"  >
-            <label for="username">Username</label>
-            <input type="text" class="form-control" name="username"  required />
-        </div>
-        <div class="form-group" >
-            <label for="password">Password</label>
-            <input type="password" class="form-control" name="password"   required />
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+<div class="">
+  <form class="display-flex flex-column-center" (ngSubmit)="onSubmit($event)" #loginForm="ngForm">
+    <h2>Cisco SSO Login</h2>
+    <div class="form-group"  >
+        <label for="username">Username</label>
+        <input type="text" class="form-control" name="username"  required />
+    </div>
+    <div class="form-group" >
+        <label for="password">Password</label>
+        <input type="password" class="form-control" name="password"   required />
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
 </div>
