--- a/src/app/components/ui/selectors/customer-selector.component.scss
+++ b/src/app/components/ui/selectors/customer-selector.component.scss
@@ -10,12 +10,14 @@ customer-selector {
 }
 
 .options-box {
+  min-width: 10em;
   width: 10em;
   padding: 0;
   border: none;
 }
 
 .option-tag {
+  min-width: 10em;
   width: 15em;
   padding: 1em;
   text-align: left;
