--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -29,6 +29,13 @@
   padding: 1em 2em 1em 0;
 }
 
+// TODO @wnamen - fix card container styles.
+.card-container {
+  width: 100%;
+  padding: 3px;
+  display:inline-grid;
+}
+
 .close-button {
   background: none;
   font-size: 1.5em;
