--- a/src/app/components/ui/card/card.component.html
+++ b/src/app/components/ui/card/card.component.html
@@ -1,11 +1,14 @@
 <!-- TODO @wnamen  Style this puppy -->
-<div class="card card-instance">
-  <div class= "card-header">
+<div class="dash-card card-radius medium-padding background-white">
+  <div class= "">
     {{cardModel.title}}
   </div>
   <div class="card-block">
     <!-- todo @barcher hookup card model data to chart -->
     {{cardModel.content}}
+  </div>
+
+  <div class="">
   </div>
 
 </div>
