--- a/src/app/components/ui/card/card.component.scss
+++ b/src/app/components/ui/card/card.component.scss
@@ -1,6 +1,5 @@
 // TODO @wnamen -- style this.
-.card-instance {
-  margin: 5px;
-  width:300px;
-  height:130px;
+.dash-card {
+  max-width: 27.5em;
+  
 }
