--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -4,6 +4,8 @@
   </div> -->
 
   <div id="dash-view" class="background-white">
+
+    <!-- Search Menu Dropdown -->
     <div id="nav-dropdown-menu" class="display-flex bottom-shadow border-gray large-padding"
       [class.menu-active]="toggled">
       <div id="side-nav-dropdown" class="col-sm-1 col-md-1 col-lg-1 large-margin-right">
@@ -16,13 +18,16 @@
         <button class="close-button medium-border border-red font-red card-radius right"
           (click)="handleMenuToggle()">&times;</button>
       </div>
-
     </div>
+
+
+    <!-- Dashboard SearchBar -->
     <div class="col-sm-10 col-md-10 col-lg-10 display-none">
       <!-- TODO @barcher, @wnamen eventually will display the tag items based on search selection -->
       <tagbar #dashboardTagBar></tagbar>
     </div>
 
+    <!--  -->
     <div id="dash-body" class="background-linen"
       [class.dash-active]="toggled">
 
@@ -40,7 +45,11 @@
           <div #cards class="card-container">
             <card (clicked)=onCardClicked($event)
               *ngFor="let dataPoint of selectedCustomerModel.data.datapoints"
-              [cardModel] ='{ title: dataPoint.title, content: dataPoint }'></card>
+              [cardModel] ='{
+                title: dataPoint.title,
+                tags: getTagsFromCustomerDatapoint(dataPoint),
+                content: buildCardContentModel(dataPoint.content)
+              }'></card>
           </div>
         </div>
 
