--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
         <div class="col-sm-1 col-md-1 col-lg-1 large-margin-right">
           <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
         </div>
-        <div class="col-sm-10 col-md-10 col-lg-10 large-padding">
+        <div class="col-sm-11 col-md-11 col-lg-11 large-padding-top no-padding-left">
           <button id="toggle" (click)="handleMenuToggle()">
             <i class="fa fa-search large-margin-right font-whitesmoke" aria-hidden="true"></i>
             <span class="font-whitesmoke">Search for customers, metrics, or categories</span>
