--- a/src/app/components/ui/card/card.component.scss
+++ b/src/app/components/ui/card/card.component.scss
@@ -1,5 +1,9 @@
 // TODO @wnamen -- style this.
 .dash-card {
+  z-index: 98;
   max-width: 27.5em;
-  
+  max-height: 25em;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  text-transform: uppercase;
+  font-size: small;
 }
