final styling adjustments for card

--- a/src/app/components/ui/card/card.component.html
+++ b/src/app/components/ui/card/card.component.html
@@ -1,6 +1,6 @@
 <!-- TODO @wnamen  Style this puppy -->
 <div class="dash-card card-radius medium-padding background-white">
-  <div class= "display-flex flex-row-spread">
+  <div class= "display-flex flex-row-spread large-margin-bottom">
     <i class="card-indicator fa fa-arrow-circle-o-up font-green" aria-hidden="true"></i>
     <p class="card-title">{{cardModel.title}}</p>
     <button type="button" class="card-tag background-yellow font-white no-border">FIN</button>
@@ -11,7 +11,7 @@
         [contentBuilder]="cardModel.contentBuilder"
         [contentModel]="cardModel.contentModel"></card-content>
   </div>
-  <div>
+  <div class="large-margin-top">
     <button type="button" class="no-background no-border" ngbPopover="You see, I show up on hover!" triggers="mouseenter:mouseleave" popoverTitle="Pop title" container="body">
       <i class="fa fa-info-circle" aria-hidden="true"></i>
     </button>
