--- a/src/app/components/ui/card/card.component.html
+++ b/src/app/components/ui/card/card.component.html
@@ -6,10 +6,11 @@
     <button type="button" class="card-tag background-yellow font-white no-border">FIN</button>
   </div>
   <div class="card-content">
-    <card-content #content
+    <img class="chart" src="/app/assets/images/chart-example.png" />
+    <!-- <card-content #content
         [contentTemplate]="cardContentTemplate"
         [contentBuilder]="cardModel.contentBuilder"
-        [contentModel]="cardModel.contentModel"></card-content>
+        [contentModel]="cardModel.contentModel"></card-content> -->
   </div>
   <div class="large-margin-top">
     <button type="button" class="no-background no-border" ngbPopover="You see, I show up on hover!" triggers="mouseenter:mouseleave" popoverTitle="Pop title" container="body">
