--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,12 +3,12 @@
   <form class="display-flex flex-column-center" (ngSubmit)="onSubmit($event)" #loginForm="ngForm">
     <h2>Cisco SSO Login</h2>
     <div class="form-group"  >
-        <label for="username">Username</label>
-        <input type="text" class="form-control" name="username"  required />
+        <label for="email">Email</label>
+        <input type="text" class="form-control" name="email" [(ngModel)]="model.email" #email="ngModel" required />
     </div>
     <div class="form-group" >
         <label for="password">Password</label>
-        <input type="password" class="form-control" name="password"   required />
+        <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" required />
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
   </form>
