Completed mobile responsiveness for dash and nav

--- a/src/app/components/ui/card/card.component.html
+++ b/src/app/components/ui/card/card.component.html
@@ -1,5 +1,5 @@
 <!-- TODO @wnamen  Style this puppy -->
-<div class="dash-card card-radius medium-padding background-white">
+<div class="dash-card card-radius medium-padding large-margin background-white">
   <div class= "display-flex flex-row-spread large-margin-bottom">
     <i class="card-indicator fa fa-arrow-circle-o-up font-green" aria-hidden="true"></i>
     <p class="card-title">{{cardModel === undefined ? '' : cardModel.title}}</p>
