--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -10,13 +10,17 @@
     <!-- Search Menu Dropdown -->
     <div id="nav-dropdown-menu" class="display-flex bottom-shadow border-gray large-padding"
       [class.menu-active]="toggled">
-      <div id="side-nav-dropdown" class="col-sm-1 col-md-1 col-lg-1 large-margin-right">
+      <div id="side-nav-dropdown" class="hidden-sm-down col-md-2 col-lg-1 large-margin-right">
         <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-blue.svg" />
       </div>
-      <div class="col-sm-9 col-md-9 col-lg-9 large-padding">
-        <search-menu #searchMenu (customerSelectionChanged)=onCustomerSelectionChanged($event) [model]="searchMenuModel"></search-menu>
+      <div id="nav-body" class="display-flex col-xs-10 col-sm-10 col-md-8 col-lg-8 large-padding">
+        <div class="hidden-md-up">
+          <button class="close-button medium-border border-red font-red card-radius right"
+            (click)="handleMenuToggle()">&times;</button>
+        </div>
+        <search-menu #searchMenu (customerSelectionChanged)=onCustomerSelectionChanged($event) [model]='searchMenuModel'></search-menu>
       </div>
-      <div class="col-sm-2 col-md-2 col-lg-2">
+      <div class="hidden-sm-down col-md-2 col-lg-2">
         <button class="close-button medium-border border-red font-red card-radius right"
           (click)="handleMenuToggle()">&times;</button>
       </div>
@@ -24,7 +28,7 @@
 
 
     <!-- Dashboard SearchBar -->
-    <div class="col-sm-10 col-md-10 col-lg-10 display-none">
+    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 display-none">
       <!-- TODO @barcher, @wnamen eventually will display the tag items based on search selection -->
       <tagbar #dashboardTagBar></tagbar>
     </div>
@@ -34,21 +38,30 @@
       [class.dash-active]="toggled">
 
       <div id="top-dash" class="background-blue display-flex large-padding">
-        <div class="col-sm-1 col-md-1 col-lg-1 large-margin-right">
+        <div class="hidden-sm-down col-md-2 col-lg-1 large-margin-right">
           <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
         </div>
-        <div class="col-sm-10 col-md-10 col-lg-10 large-padding-top no-padding-left">
-          <button id="toggle" (click)="handleMenuToggle()">
-            <i class="fa fa-search large-margin-right font-whitesmoke" aria-hidden="true"></i>
-            <span class="font-whitesmoke">Search for customers, metrics, or categories</span>
-          </button>
+        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-11 large-padding-top no-padding-left">
+          <div class="display-inline-flex">
+            <div class="hidden-md-up large-margin-right">
+              <img class="medium-border-right border-whitesmoke" src="/app/assets/images/cisco-logo-white.svg" />
+            </div>
+            <button id="toggle" (click)="handleMenuToggle()">
+              <i class="fa fa-search large-margin-right font-whitesmoke" aria-hidden="true"></i>
+              <span class="font-whitesmoke">Search for customers, metrics, or categories</span>
+            </button>
+          </div>
           <!-- Draw the cards -->
           <!-- TODO @wnamen - fix card layout -->
           <div #cards class="card-columns large-margin-top">
-            <card data-packed class="card no-background no-border large-margin"
-              *ngFor="let dataPoint of filterCustomerDatapoints(selectedCustomerModel.data.datapoints)"
-              [cardContentBuilder]="getContentBuilder(dataPoint.content.type)"
-              [cardModel] ='buildCardModel(dataPoint)'></card>
+            <card data-packed class="card no-background no-border" (clicked)=onCardClicked($event)
+              *ngFor="let dataPoint of selectedCustomerModel.data.datapoints"
+              [cardContentTemplate]='barchartTemplate'
+              [cardModel] ='{
+                title: dataPoint.title,
+                tags: getTagsFromCustomerDatapoint(dataPoint),
+                content: buildCardContentModel(dataPoint.content)
+              }'></card>
           </div>
         </div>
       </div>
