--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -9,6 +9,10 @@
   box-shadow: 0px 1px 50px black;
 }
 
+#nav-body {
+  flex-direction: column;
+}
+
 #dash-body {
   width: 100vw;
   height: 60vw;
@@ -80,4 +84,11 @@
 
 .card {
 
+}
+
+
+@media only screen and (max-width : 767px) {
+  #nav-dropdown-menu {
+    padding: 0;
+  }
 }
