--- a/src/app/components/ui/card/card.component.scss
+++ b/src/app/components/ui/card/card.component.scss
@@ -1,6 +1,7 @@
 // TODO @wnamen -- style this.
 .dash-card {
   z-index: 98;
+  width: 100%;
   max-width: 25em;
   max-height: 25em;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
