--- a/src/app/components/ui/selectors/customer-selector.component.scss
+++ b/src/app/components/ui/selectors/customer-selector.component.scss
@@ -11,7 +11,8 @@ customer-selector {
 
 .options-box {
   min-width: 10em;
-  width: 10em;
+  width: 15em;
+  border: none;
   padding: 0;
   border: none;
 }
